--- a/tutorials/nextjs-blog/package.json
+++ b/tutorials/nextjs-blog/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "@types/react": "^17.0.47",
+    "date-fns": "^2.29.1",
+    "gray-matter": "^4.0.3",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.6",
+    "@types/react": "^17.0.47",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3"
   }
