--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "changeset": "changeset",
     "format": "prettier --write .",
     "lint": "eslint tutorials/** ",
+    "build:ts-template": "pnpm --filter @fluntqa/tslib-starter build",
     "build:remix-demo": "pnpm --filter @fluent/remix-demo build",
     "build:todo": "pnpm --filter todo-ui build",
     "build:utils": "pnpm --filter utils build",
     "build-tutorials": "pnpm run build --filter tutorials/*",
     "build": "pnpm run build -r",
     "dev:nextjs-dev": "pnpm --filter @fluentdemo/nextjs-blog dev",
-    "build:nextjs-dev": "pnpm --filter @fluentdemo/nextjs-blog build"
+    "build:nextjs-dev": "pnpm --filter @fluentdemo/nextjs-blog build",
+    "build:ins-plugins":"pnpm --filter @fluent/insomina-plugins build"
   },
   "browserslist": [
     "since 2018"
@@ -61,5 +63,6 @@
   },
   "dependencies": {
     "typescript": "^4.7.4"
+
   }
 }
