--- a/app/edu/package.json
+++ b/app/edu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@specdao/website",
+  "name": "edu",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,24 +14,16 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.1.0",
-    "@docusaurus/preset-classic": "^2.1.0",
-    "@emotion/react": "^11.10.0",
-    "@mantine/core": "^5.2.0",
-    "@mantine/hooks": "^5.2.0",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/preset-classic": "2.2.0",
     "@mdx-js/react": "^1.6.22",
-    "@nextui-org/react": "^1.0.0-beta.10",
-    "@octokit/rest": "^19.0.4",
-    "@supabase/supabase-js": "^1.35.4",
-    "axios": "^0.27.2",
     "clsx": "^1.2.1",
-    "octokit": "^2.0.7",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-rc.1"
+    "@docusaurus/module-type-aliases": "2.2.0"
   },
   "browserslist": {
     "production": [
